...
                    }
                }
                if (reading != null && (
                        reading.chapters.size > 1 || reading.chapters.any { !it.title.isNullOrBlank() }
                        )
                ) {
                    TextButton(onClick = onContents, modifier = Modifier.testTag("reader_open_contents")) {
                        Text(stringResource(R.string.table_of_contents))
                    }
                }
            }
        }
        if (reading != null && reading.chapters.size > 1) {
...
